--- a/style.css
+++ b/style.css
@@ -91,5 +91,11 @@ flex-grow: 1;}
     color: aqua;
     font-size: 20px;
     font-weight: 900;
+    margin-top:15px;
 }
+.leftblock p {
+    color: rgb(77, 248, 191);
+    font-size: 15px;
+    font-weight: 600;
 
+}
