--- a/style.css
+++ b/style.css
@@ -185,8 +185,9 @@ font-weight: 500;
     .audioblock img{display: none;
    } 
    #wave{padding: 30px 0;
-    width: 90%;
-          }
+    width: 100%;
+    
+    }
 }
 @media (max-width:778px)
 {
@@ -208,6 +209,8 @@ font-weight: 500;
 .bigtext {
     font-size: 60px;
 } 
-
+header,footer {
+    padding: 20px;
+}
 }
 
